--- a/Diff_editor/src/main/webapp/index.html
+++ b/Diff_editor/src/main/webapp/index.html
@@ -10,7 +10,7 @@
 
 <table>
     <tr>
-        <form action="/TestServlet/" method="POST">
+        <form action="/Diff_editor/TestServlet/" method="POST">
         <td><input type="text" id="search_box" name="commit_url"></td>
         <td><input  type="submit" name="button"></td>
     </tr>
