--- a/Diff_editor/src/main/webapp/index.html
+++ b/Diff_editor/src/main/webapp/index.html
@@ -62,12 +62,11 @@
 	<section id="one" class="wrapper style2 special">
 		<header class="major">
 			<h2>
-				Main area to put editor content<br /> and others
+				Enter you github commit url here:<br />
 			</h2>
 		</header>
 
-		<form class="form-inline"
-			style="margin-top: 80px; position: absolute; left: 50px; width: 1400px; top: 30px;">
+		<form class="form-inline">
 			<div class="form-group">
 				<div class="input-group-btn">
 					<input type="text" class="form-control" id="commitUrl"
@@ -90,8 +89,7 @@
 		
 		</div> -->
 		<ul id="fileList" class="dropdown-menu"
-			aria-labelledby="dropdownMenu3"
-			style="position: absolute; left: 50px; width: 1000px; max-height: 120px; top: 144px; width: 1000px; overflow: auto">
+			aria-labelledby="dropdownMenu3">
 			<!-- <li class="dropdown-header">Dropdown header</li>
 			<li><a href="#">Action</a></li>
 			<li><a href="#">Another action</a></li>
@@ -102,35 +100,32 @@
 
 		<!-- </div> -->
 
-		<div class="panel panel-default"
-			style="margin-top: 80px; position: absolute; left: 1550px; display: inline; width: 250px; height: 200px; top: 30px; display: none;"
-			id="info_panel">
+		<div class="panel panel-default" style="display: none;" id="info_panel">
 
 			<div class="panel-heading">
 				<h3 class="panel-title">Legend</h3>
 			</div>
 			<div class="panel-body">
-
-				<ul style="position: absolute; top: 60px; left: 0;">
+				<ul>
 					<li style="height: 25px;">
 						<div
-							style="position: absolute; top: 1px; left: 40px; display: inline; background-color: rgba(0, 205, 0, 0.2); width: 45px; height: 18px;"></div>
-						<span style="position: absolute; left: 100px;">Insert</span>
+							style=" display: inline; background-color: rgba(0, 205, 0, 0.2); width: 45px; height: 18px;"></div>
+						<span >Insert</span>
 					</li>
 					<li style="height: 25px;">
 						<div
-							style="position: absolute; top: 26px; left: 40px; display: inline; background-color: rgba(255, 0, 0, 0.2); width: 45px; height: 18px;"></div>
-						<span style="position: absolute; left: 100px;">Delete</span>
+							style="display: inline; background-color: rgba(255, 0, 0, 0.2); width: 45px; height: 18px;"></div>
+						<span>Delete</span>
 					</li>
 					<li style="height: 25px;">
 						<div
-							style="position: absolute; top: 51px; left: 40px; display: inline; background-color: rgba(0, 100, 255, 0.2); width: 45px; height: 18px;"></div>
-						<span style="position: absolute; left: 100px;">Change</span>
+							style="display: inline; background-color: rgba(0, 100, 255, 0.2); width: 45px; height: 18px;"></div>
+						<span>Change</span>
 					</li>
 					<li style="height: 25px;">
 						<div
-							style="position: absolute; top: 76px; left: 40px; display: inline; background-color: rgba(255, 140, 0, 0.2); width: 45px; height: 18px;"></div>
-						<span style="position: absolute; left: 100px;">Move</span>
+							style="display: inline; background-color: rgba(255, 140, 0, 0.2); width: 45px; height: 18px;"></div>
+						<span>Move</span>
 					</li>
 				</ul>
 			</div>
