--- a/Diff_editor/src/main/webapp/index.html
+++ b/Diff_editor/src/main/webapp/index.html
@@ -21,21 +21,6 @@
 <body id="top">
 
 	<div id="navigation"></div>
-	<!-- <span class="label label-primary" style="position:absolute;top:0;left:10px;font-size:18px">RQ</span>
-    <span class="label label-primary" style="position:absolute;top:0;left:160px;font-size:18px">commit id</span>
-    <span class="label label-primary" style="position:absolute;top:0;left:670px;font-size:18px">file name</span>
-    <div id ="RQList"class="list-group" style="position:absolute;left:10px;display:inline;width:70px;height:240px;top:30px;overflow:auto">	
-    	<button id ="RQ3" type="button" class="list-group-item">
-			RQ3</button>
-		<button id ="RQ4" type="button" class="list-group-item" onclick="getCommitByRQ(this)">
-			RQ4</button>
-    </div>
-	<div id ="commitList"class="list-group" style="position:absolute;left:160px;display:inline;width:450px;height:200px;top:30px;overflow:auto">		
-	</div>
-	<div style="position:absolute;left:670px;display:inline;width:800px;height:200px;top:30px;overflow:auto">
-		<div id ="fileList" class="list-group" style="width:800px;">
-		</div>
-	</div> -->
 
 	<!-- Header -->
 	<header id="header">
@@ -60,14 +45,14 @@
 
 	<!-- One -->
 	<section id="one" class="wrapper style2 special">
-		<header class="major">
+		<!-- <header class="major">
 			<h2>
 				Main area to put editor content<br /> and others
 			</h2>
-		</header>
+		</header> -->
 
 		<form class="form-inline"
-			style="margin-top: 80px; position: absolute; left: 50px; width: 1400px; top: 30px;">
+			style="margin-top: 80px; position: relative; left: 50px; width: 1400px; top: 30px;">
 			<div class="form-group">
 				<div class="input-group-btn">
 					<input type="text" class="form-control" id="commitUrl"
@@ -78,32 +63,17 @@
 						onclick="getFileByCommitUrl()">Analyze</button>
 				</div>
 			</div>
-			<!-- <button type="button" class="btn btn-primary" onclick = "getFileByCommitUrl()">Analyze</button> -->
-
-
 
 		</form>
-		<!-- <%--<button id="searchButton2" class="btn btn-info" type="button">Search</button>--%> -->
-
-		<!-- <div style="position:absolute;left:144px;display:inline;width:1000px;height:130px;top:70px;"> -->
-		<!-- <div id ="fileList" class="list-group" style="width:1000px;">
-		
-		</div> -->
 		<ul id="fileList" class="dropdown-menu"
 			aria-labelledby="dropdownMenu3"
-			style="position: absolute; left: 50px; width: 1000px; max-height: 120px; top: 144px; width: 1000px; overflow: auto">
-			<!-- <li class="dropdown-header">Dropdown header</li>
-			<li><a href="#">Action</a></li>
-			<li><a href="#">Another action</a></li>
-			<li><a href="#">Something else here</a></li>
-			<li class="dropdown-header">Dropdown header</li>
-			<li><a href="#">Separated link</a></li> -->
+			style="position: relative; left: 50px; width: 1000px; max-height: 120px; top: 144px; width: 1000px; overflow: auto">
 		</ul>
 
 		<!-- </div> -->
 
 		<div class="panel panel-default"
-			style="margin-top: 80px; position: absolute; left: 1550px; display: inline; width: 250px; height: 200px; top: 30px; display: none;"
+			style="margin-top: 80px; position: relative; left: 1550px; display: inline; width: 250px; height: 200px; top: 30px; display: none;"
 			id="info_panel">
 
 			<div class="panel-heading">
@@ -111,26 +81,26 @@
 			</div>
 			<div class="panel-body">
 
-				<ul style="position: absolute; top: 60px; left: 0;">
+				<ul style="position: relative; top: 60px; left: 0;">
 					<li style="height: 25px;">
 						<div
-							style="position: absolute; top: 1px; left: 40px; display: inline; background-color: rgba(0, 205, 0, 0.2); width: 45px; height: 18px;"></div>
-						<span style="position: absolute; left: 100px;">Insert</span>
+							style="position: relative; top: 1px; left: 40px; display: inline; background-color: rgba(0, 205, 0, 0.2); width: 45px; height: 18px;"></div>
+						<span style="position: relative; left: 100px;">Insert</span>
 					</li>
 					<li style="height: 25px;">
 						<div
-							style="position: absolute; top: 26px; left: 40px; display: inline; background-color: rgba(255, 0, 0, 0.2); width: 45px; height: 18px;"></div>
-						<span style="position: absolute; left: 100px;">Delete</span>
+							style="position: relative; top: 26px; left: 40px; display: inline; background-color: rgba(255, 0, 0, 0.2); width: 45px; height: 18px;"></div>
+						<span style="position: relative; left: 100px;">Delete</span>
 					</li>
 					<li style="height: 25px;">
 						<div
-							style="position: absolute; top: 51px; left: 40px; display: inline; background-color: rgba(0, 100, 255, 0.2); width: 45px; height: 18px;"></div>
-						<span style="position: absolute; left: 100px;">Change</span>
+							style="position: relative; top: 51px; left: 40px; display: inline; background-color: rgba(0, 100, 255, 0.2); width: 45px; height: 18px;"></div>
+						<span style="position: relative; left: 100px;">Change</span>
 					</li>
 					<li style="height: 25px;">
 						<div
-							style="position: absolute; top: 76px; left: 40px; display: inline; background-color: rgba(255, 140, 0, 0.2); width: 45px; height: 18px;"></div>
-						<span style="position: absolute; left: 100px;">Move</span>
+							style="position: relative; top: 76px; left: 40px; display: inline; background-color: rgba(255, 140, 0, 0.2); width: 45px; height: 18px;"></div>
+						<span style="position: relative; left: 100px;">Move</span>
 					</li>
 				</ul>
 			</div>
