--- a/Diff_editor/src/main/webapp/index.html
+++ b/Diff_editor/src/main/webapp/index.html
@@ -29,7 +29,7 @@
 				<a href="#">Code Review Assistant</a>
 			</h1>
 			<p>
-				Smart servant to<br /> boost your code review efficiency</a>
+				Boost<br/> your code review efficiency</a>
 			</p>
 			<ul class="actions">
 				<li><a href="#one" class="button icon fa-chevron-down scrolly">Get
@@ -38,38 +38,40 @@
 		</div>
 		<div class="image">
 			<div class="inner">
-				<img src="image/screen.jpg" alt="" />
+				<img src="image/cr2.jpg" alt="" height="400" width="400" />
 			</div>
 		</div>
 	</header>
 
 	<!-- One -->
-	<section id="one" class="wrapper style2 special">
+	<section id="one" class="container">
 		<!-- <header class="major">
 			<h2>
 				Enter you github commit url here:<br />
 			</h2>
 		</header> -->
-		<div id="input_form_div">
-			<form class="form-inline">
-				<div class="form-group">
+		<div id="input_form_div" class = "row">
+
+			<div class="col-md-6 col-md-offset-3" >				
+					<h3 class="">Enter your github URL here:</h3>
 					<div class="input-group-btn">
-						<input type="text" class="form-control" id="commitUrl"
-							name="commit_url" placeholder="Commit Url"
+						<input type="text" class="form-control " id="commitUrl"
+							name="commit_url" placeholder="your github commit url here."
 							style="width: 600px;">
-						<!-- <input id="commitUrl" type="text" style="width: 1000px;top: 30px;" class="form-control" name="commit_url"> -->
+						<br>
 						<button id="searchButton" class="btn btn-info" type="button"
 							onclick="getFileByCommitUrl()">Analyze</button>
 					</div>
-				</div>	
-			</form>
+			</div>	
+
 		</div>
+		
 		
 		<!-- <%--<button id="searchButton2" class="btn btn-info" type="button">Search</button>--%> -->
 
 		<!-- <div style="position:absolute;left:144px;display:inline;width:1000px;height:130px;top:70px;"> -->
 		<!-- <div id ="fileList" class="list-group" style="width:1000px;"> -->
-		<div id="diff_editor_container" >
+		<div id="diff_editor_container" class = "row" >
 			<div id="diff_editor_meta" class="container">
 				<div id= "file_list_container" class="row">
 					<div class="col-md-6 col-md-offset-3">
