--- a/Diff_editor/src/main/webapp/index.html
+++ b/Diff_editor/src/main/webapp/index.html
@@ -15,6 +15,7 @@
 <link type="text/css" rel="styleSheet" href="style/editor.css" />
 <link type="text/css" rel="styleSheet" href="style/color.css" />
 <link type="text/css" rel="styleSheet" href="style/addition.css" />
+<link type="text/css" rel="styleSheet" href="style/file_list.css" />
 <link type="text/css" rel="styleSheet"
 	href="http://bigcode.fudan.edu.cn/css/nav.css" />
 </head>
@@ -29,7 +30,7 @@
 				<a href="#">Code Review Assistant</a>
 			</h1>
 			<p>
-				Boost<br/> your code review efficiency</a>
+				Boost<br /> your code review efficiency</a>
 			</p>
 			<ul class="actions">
 				<li><a href="#one" class="button icon fa-chevron-down scrolly">Get
@@ -44,16 +45,11 @@
 	</header>
 
 	<!-- One -->
-	<section id="one" class="container">
-		<!-- <header class="major">
-			<h2>
-				Enter you github commit url here:<br />
-			</h2>
-		</header> -->
-		<div id="input_form_div" class = "row">
-
-			<div class="col-md-6 col-md-offset-3" >				
-					<h3 class="">Enter your github URL here:</h3>
+	<section id="one">
+		<div class="container">
+			<div id="input_form_div" class="row" style="margin-top: 188px">
+				<div class="col-md-6 col-md-offset-3">
+					<!--  <h3 class="">Enter your github URL here:</h3>
 					<div class="input-group-btn">
 						<input type="text" class="form-control " id="commitUrl"
 							name="commit_url" placeholder="your github commit url here."
@@ -62,93 +58,138 @@
 						<button id="searchButton" class="btn btn-info" type="button"
 							onclick="getFileByCommitUrl()">Analyze</button>
 					</div>
-			</div>	
+					-->
+					<div class="input-group has-feedback">
+						<!--<span class="glyphicon glyphicon-search"></span>-->
 
+						<span class="input-group-addon" style="background-color: white;"><span
+							class="glyphicon glyphicon-search"></span></span> <input type="text"
+							class="form-control" id="commitUrl" name="commit_url"
+							placeholder="your github commit url" style="width: 600px;">
+
+						<span class="input-group-btn">
+							<button id="searchButton" class="btn btn-info" type="button"
+								onclick="getFileByCommitUrl()" style="color: #FFFFFF !important">Analyze</button>
+						</span>
+					</div>
+				</div>
+			</div>
 		</div>
-		
-		
-		<!-- <%--<button id="searchButton2" class="btn btn-info" type="button">Search</button>--%> -->
 
-		<!-- <div style="position:absolute;left:144px;display:inline;width:1000px;height:130px;top:70px;"> -->
-		<!-- <div id ="fileList" class="list-group" style="width:1000px;"> -->
-		<div id="diff_editor_container" class = "row" >
-			<div id="diff_editor_meta" class="container">
-				<div id= "file_list_container" class="row">
-					<div class="col-md-6 col-md-offset-3">
-					<ul id="fileList" class="file-menu" style="max-height:210px;overflow:auto;visibility:hidden">
+		<!-- test file list -->
+		<div id="toc"
+			class="details-collapse table-of-contents js-details-container Details js-transitionable open Details--on panel panel-default"
+			style="margin-left:10%;margin-right:10%" >
+			<!-- <div class="BtnGroup float-right"
+				data-ga-load="Diff, view, Viewed Split Diff">
+				<a class="btn btn-sm BtnGroup-item"
+					href="https://github.com/calvinhkf/DiffMiner/commit/b15d7d7f7b95d6b0443f10f6eccfb9e210dbe11d?diff=unified">
+					Unified </a> <a class="btn btn-sm selected BtnGroup-item"
+					href="https://github.com/calvinhkf/DiffMiner/commit/b15d7d7f7b95d6b0443f10f6eccfb9e210dbe11d?diff=split">
+					Split </a>
+			</div>
+			-->
+
+			<div class="toc-diff-stats">
+				<svg class="octicon octicon-diff" viewBox="0 0 13 16" version="1.1"
+					width="13" height="16" aria-hidden="true">
+					<path fill-rule="evenodd"
+						d="M6 7h2v1H6v2H5V8H3V7h2V5h1v2zm-3 6h5v-1H3v1zM7.5 2L11 5.5V15c0 .55-.45 1-1 1H1c-.55 0-1-.45-1-1V3c0-.55.45-1 1-1h6.5zM10 6L7 3H1v12h9V6zM8.5 0H3v1h5l4 4v8h1V4.5L8.5 0z"></path></svg>
+				Showing
+				<button type="button" class="btn-link js-details-target"
+					aria-expanded="true" data-initial-state="false">2 changed
+					files</button>
+				with <strong>19 additions</strong> and <strong>19 deletions</strong>.
+			</div>
+
+			<ol class="content collapse js-transitionable" style="">
+			<!-- 
+				<li><svg title="modified" class="octicon octicon-diff-modified"
+						viewBox="0 0 14 16" version="1.1" width="14" height="16"
+						aria-hidden="true">
+						<path fill-rule="evenodd"
+							d="M13 1H1c-.55 0-1 .45-1 1v12c0 .55.45 1 1 1h12c.55 0 1-.45 1-1V2c0-.55-.45-1-1-1zm0 13H1V2h12v12zM4 8c0-1.66 1.34-3 3-3s3 1.34 3 3-1.34 3-3 3-3-1.34-3-3z"></path></svg>
+					<a href="#diff-cff329f009d7a94c3109ee4bf80e5a16">src/edu/fdu/se/astdiff/preprocessingfile/DstBodyCheck.java</a>
+				</li>
+				<li><svg title="modified" class="octicon octicon-diff-modified"
+						viewBox="0 0 14 16" version="1.1" width="14" height="16"
+						aria-hidden="true">
+						<path fill-rule="evenodd"
+							d="M13 1H1c-.55 0-1 .45-1 1v12c0 .55.45 1 1 1h12c.55 0 1-.45 1-1V2c0-.55-.45-1-1-1zm0 13H1V2h12v12zM4 8c0-1.66 1.34-3 3-3s3 1.34 3 3-1.34 3-3 3-3-1.34-3-3z"></path></svg>
+					<a href="#diff-3da7d7895884e3a89e2c8256e76c1566">src/edu/fdu/se/main/astdiff/MyHttpServer.java</a>
+				</li>
+				-->
+			</ol>
+		</div>
+		<!--  <div id="diff_editor_container"> 
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6 col-md-offset-3">
+					<ul id="fileList" class="file-menu"
+						style="max-height: 210px; overflow: auto; visibility: hidden">
 						<!-- <li class="dropdown-header">Dropdown header</li>
 						<li><a onclick = 'getContentByFileNameAndParentId(this)'>Action</a></li>
 						<li><a>Another action</a></li>
 						<li><a>Something else here</a></li>
 						<li class="dropdown-header">Dropdown header</li>
 						<li><a>Separated link</a></li>
-						<li><a>Separated link</a></li> -->
+						<li><a>Separated link</a></li> 
 					</ul>
-					</div>
-				</div>																
-				</div>				
-				
-			</div>
-			<!-- editor -->
-			<div class="editor-frame">
-				<div id="diff-editor">
-					<div
-						class="monaco-diff-editor monaco-editor-background side-by-side vs"
-						style="position: relative; height: 100%;">
-						<canvas id="myCanvas3" width="400" height="300"
-							style="position: absolute; will-change: transform; top: 0px; left: 1486px;"></canvas>
-						<!--original-->
-						<div class="editor original" data-keybinding-context="2"
-							data-mode-id="javascript"
-							style="position: absolute; height: 100%; width: 243px; left: 0px;">
-							<div class="monaco-editor original-in-monaco-diff-editor vs"
-								data-uri="inmemory://model/2"
-								style="width: 743px; height: 4000px; overflow: hidden"></div>
-						</div>
-						<!--modified-->
-						<div class="editor modified" data-keybinding-context="3"
-							data-mode-id="javascript"
-							style="position: absolute; height: 100%; width: 173px; left: 743px;">
-							<div class="monaco-editor modified-in-monaco-diff-editor vs"
-								data-uri="inmemory://model/3"
-								style="width: 743px; height: 4000px; overflow: hidden"></div>
-						</div>
-					<div class="bubbleZone" data-keybinding-context="3"
-						data-mode-id="javascript"
-						style="position: absolute; height: 100%; width: 410px; left: 1486px;">
-						<div id="info_panel" class="panel panel-default"
-							style="width: 260px;top:0;height:180px;visibility:hidden">
-							<div class="panel-heading">
-								<h3 class="panel-title">Legend</h3>
-							</div>
-							<div class="panel-body">
-								<ul>
-									<li style="height: 25px;">
-										<div
-											style="background-color: rgba(0, 205, 0, 0.2);" class="legend_icon"></div>
-										<span>Insert</span>
-									</li>
-									<li style="height: 25px;">
-										<div
-											style="background-color: rgba(255, 0, 0, 0.2);" class="legend_icon"></div>
-										<span>Delete</span>
-									</li>
-									<li style="height: 25px;">
-										<div
-											style="background-color: rgba(0, 100, 255, 0.2);" class="legend_icon"></div>
-										<span>Change</span>
-									</li>
-									<li style="height: 25px;">
-										<div
-											style="background-color: rgba(255, 140, 0, 0.2);" class="legend_icon"></div>
-										<span>Move</span>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</div>
 				</div>
-			</div>	
+			</div>
+		</div>-->
+		<!-- editor -->
+		<div id="diff-editor"
+			class="editor-frame container-fluid panel panel-default" style="margin-left:10%;margin-right:10%">
+			
+			<div
+				class="monaco-diff-editor monaco-editor-background side-by-side vs row" style="height: 100%;">
+				<!--original-->
+				<div class="editor original col-md-5" data-keybinding-context="2"
+					data-mode-id="javascript" style="height: 100%;">
+					<div class="monaco-editor original-in-monaco-diff-editor vs"
+						data-uri="inmemory://model/2"
+						style="overflow: hidden"></div>
+				</div>
+				<!--modified-->
+				<div class="editor modified col-md-5" data-keybinding-context="3"
+					data-mode-id="javascript" style="height: 100%;">
+					<div class="monaco-editor modified-in-monaco-diff-editor vs"
+						data-uri="inmemory://model/3"
+						style="overflow: hidden"></div>
+				</div>
+				<div class="bubbleZone col-md-2" data-keybinding-context="3"
+					data-mode-id="javascript" style="height: 100%; width: 200px;">
+					<div id="info_panel" class="panel panel-default"
+						style="width: 100px; top: 0; height: 180px; visibility: hidden">
+						<div class="panel-heading">
+							<h3 class="panel-title">Legend</h3>
+						</div>
+						<div class="panel-body" style="padding-left: 24px;">
+							<ul>
+								<li style="height: 25px;">
+									<div style="background-color: rgba(0, 205, 0, 0.2);"
+										class="legend_icon"></div> <span>Insert</span>
+								</li>
+								<li style="height: 25px;">
+									<div style="background-color: rgba(255, 0, 0, 0.2);"
+										class="legend_icon"></div> <span>Delete</span>
+								</li>
+								<li style="height: 25px;">
+									<div style="background-color: rgba(0, 100, 255, 0.2);"
+										class="legend_icon"></div> <span>Change</span>
+								</li>
+								<li style="height: 25px;">
+									<div style="background-color: rgba(255, 140, 0, 0.2);"
+										class="legend_icon"></div> <span>Move</span>
+								</li>
+							</ul>
+						</div>
+					</div>
+					<canvas id="myCanvas3" width="200" height="300"
+						style="will-change: transform; top: 0px;"></canvas>
+				</div>
+			</div>
 		</div>
 
 	</section>
