--- a/Diff_editor/src/main/webapp/index.html
+++ b/Diff_editor/src/main/webapp/index.html
@@ -117,7 +117,7 @@
 				<div class="bubbleZone col-md-3 nopadding" data-keybinding-context="3"
 					data-mode-id="javascript" style="height: 100%;">
 					<div id="info_panel" class="panel panel-default"
-						style="top: 0;visibility: hidden;width:270px">
+						style="top: 0;visibility: hidden;width:270px;height:180px;margin:0">
 						<div class="panel-heading">
 							<h3 class="panel-title">Legend</h3>
 						</div>
@@ -143,7 +143,7 @@
 						</div>
 					</div>
 					<canvas id="myCanvas3" width="200" height="300"
-						style="will-change: transform; top: 0px;"></canvas>
+						style="will-change: transform; margin-top: -180px;"></canvas>
 				</div>
 			</div>
 		</div>
