--- a/Diff_editor/src/main/webapp/index.html
+++ b/Diff_editor/src/main/webapp/index.html
@@ -105,14 +105,14 @@
 					data-mode-id="javascript" style="height: 100%;">
 					<div class="monaco-editor original-in-monaco-diff-editor vs"
 						data-uri="inmemory://model/2"
-						style="overflow: hidden"></div>
+						style="overflow-x: auto;overflow-y:hidden;"></div>
 				</div>
 				<!--modified-->
 				<div class="editor modified col-md-4 nopadding" data-keybinding-context="3"
 					data-mode-id="javascript" style="height: 100%;">
 					<div class="monaco-editor modified-in-monaco-diff-editor vs"
 						data-uri="inmemory://model/3"
-						style="overflow: hidden"></div>
+						style="overflow-x: auto;overflow-y:hidden;"></div>
 				</div>
 				<div class="bubbleZone col-md-3 nopadding" data-keybinding-context="3"
 					data-mode-id="javascript" style="height: 100%;">
