--- a/Diff_editor/src/main/webapp/index.html
+++ b/Diff_editor/src/main/webapp/index.html
@@ -95,7 +95,7 @@
 
 		<!-- editor -->
 		<div id="diff-editor"
-			class="editor-frame container-fluid panel panel-default;visibility:hidden;" style="margin-left:5%;margin-right:5%">
+			class="editor-frame container-fluid panel panel-default" style="margin-left:5%;margin-right:5%;visibility:hidden;">
 			
 			<div
 				class="monaco-diff-editor monaco-editor-background side-by-side vs row" style="height: 100%;">
