--- a/Diff_editor/src/main/webapp/index.html
+++ b/Diff_editor/src/main/webapp/index.html
@@ -27,7 +27,7 @@
 	<header id="header">
 		<div class="content">
 			<h1>
-				<a href="#">Code Review Assistant</a>
+				<a href="#">Code Differences Understanding</a>
 			</h1>
 			<p>
 				Boost<br /> your code review efficiency</a>
