--- a/Diff_editor/src/main/webapp/index.html
+++ b/Diff_editor/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Code Review Assitant</title>
+<title>Code Differences Understanding</title>
 <link type="text/css" rel="styleSheet" href="css/bootstrap.min.css" />
 <!-- <link type="text/css" rel="styleSheet" href="bootstrap-3.3.7-dist/css/bootstrap.css" /> -->
 <link type="text/css" rel="styleSheet"
