--- a/Diff_editor/src/main/webapp/index.html
+++ b/Diff_editor/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Code Differences Understanding</title>
+<title>CodeWisdom</title>
 <link type="text/css" rel="styleSheet" href="css/bootstrap.min.css" />
 <!-- <link type="text/css" rel="styleSheet" href="bootstrap-3.3.7-dist/css/bootstrap.css" /> -->
 <link type="text/css" rel="styleSheet"
@@ -116,7 +116,7 @@
 				<div class="bubbleZone col-md-3 nopadding" data-keybinding-context="3"
 					data-mode-id="javascript" style="height: 100%;">
 					<div id="info_panel" class="panel panel-default"
-						style="top: 0;visibility: hidden;width:270px;height:180px;margin:0">
+						style="top: 0;visibility: hidden;width:270px;height:180px;margin-left:90px;">
 						<div class="panel-heading">
 							<h3 class="panel-title">Legend</h3>
 						</div>
