make CLIDFF-WEB running local

--- a/src/main/webapp/index_local.html
+++ b/src/main/webapp/index_local.html
@@ -74,17 +74,17 @@
 						<span class="input-group-addon" style="background-color: white;"><span
 							class="glyphicon glyphicon-search"></span></span> <input type="text"
 							class="form-control" id="commitUrl" name="commit_url"
-							placeholder="enter your github commit url" style="width: 600px;">
+							placeholder="enter your commit url" style="width: 600px;">
 
 						<span class="input-group-btn">
 							<button id="searchButton" class="btn btn-info" type="button"
-								onclick="getFileByCommitUrl(0)" style="color: #FFFFFF !important">Analyze</button>
+								onclick="getFileByCommitUrl(1)" style="color: #FFFFFF !important">Analyze</button>
 						</span>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div id="example1" style="text-align: center;text-decoration:underline; "  onclick="setInputBar(0)" >
+		<div id="example1" style="text-align: center;text-decoration:underline; "  onclick="setInputBar(1)" >
 			Example commit in spring-framework
 		</div>
 
