add web interaction

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -105,6 +105,12 @@
 			<ol class="content collapse js-transitionable" style=""></ol>
 		</div>
 
+		<div id="banner"><!--
+			<div class="alert alert-warning" role="alert" style="margin-left: 5%; width: 400px;">
+				Banner
+			</div>-->
+		</div>
+
 		<!-- editor -->
 		<div id="diff-editor"
 			class="editor-frame container-fluid panel panel-default"
