--- a/src/main/webapp/demo2/dom.html
+++ b/src/main/webapp/demo2/dom.html
@@ -17,21 +17,47 @@
 
         <div class="jtk-demo-main">
             <!-- demo -->
-            <div class="jtk-demo-canvas canvas-wide perimeter-demo jtk-surface jtk-surface-nopan" id="canvas">
-                <div class="shape" data-shape="Rectangle">Rectangle</div>
-                <div class="shape" data-shape="Ellipse">Ellipse</div>
-                <div class="shape" data-shape="Circle">Circle</div>
-                <div class="shape" data-shape="Diamond">Diamond</div>
-                <div class="shape" data-shape="Triangle" style="left:700px;top:380px;">Triangle</div>
-                <div class="shape _90" data-shape="Triangle" data-rotation="90" style="left:60px;top:500px;">90&#176; rotation</div>
+            <div class="jtk-demo-canvas canvas-wide perimeter-demo jtk-surface jtk-surface-nopan" id="canvas">  <!-- Rectangle, Ellipse, Circle, Diamond, Triangle -->
+                <div class="shape" data-shape="Rec_Def" id="test1"></div>
+                <div class="shape" data-shape="Rec_Use"></div>
+                <div class="shape" data-shape="Rec_Use2"></div>
             </div>
-            <!-- /demo -->
         </div>
 
         <!-- JS -->
+        <script src="../node_modules/monaco-editor/min/vs/loader.js"></script>
+        <script src="../js/jquery-1.9.0-min.js"></script>
         <script src="../js/jsplumb.js"></script>
-		<!--  demo code -->
+        <!--<script src="../js/jsplumbtoolkit.js"></script>-->
+
 		<script src="demo.js"></script>
+        <script>
+            require.config({ paths: { 'vs': '../node_modules/monaco-editor/min/vs' }});
+
+            require(['vs/editor/editor.main'], function() {
+                var shapes = document.getElementsByClassName("shape");
+                for(var i=0;i<shapes.length;i++){
+                    item = shapes[i];
+                    var editor = monaco.editor.create(shapes[i], {
+                        value: [
+                            'function x() {',
+                            '\tconsole.log("Hello world!");',
+                            '}'
+                        ].join('\n'),
+                        language: 'javascript',
+                        contextmenu: false,
+                        hover:{
+                          "enabled":false
+                        },
+                        minimap:{
+                            "enabled":false
+                        },
+                        hideCursorInOverviewRuler:true
+                    });
+                }
+
+            });
+        </script>
 
     </body>
 </html>
