--- a/src/main/webapp/demo2/dom.html
+++ b/src/main/webapp/demo2/dom.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 
-        <title>jsPlumb - perimeter anchors demonstration</title>
+        <title>Diff Graph</title>
         <meta http-equiv="content-type" content="text/html;charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no"/>
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
@@ -14,10 +14,8 @@
         <link rel="stylesheet" href="demo.css">
     </head>
     <body data-demo-id="perimeterAnchors">
-
         <div class="jtk-demo-main">
-            <!-- demo -->
-            <div class="jtk-demo-canvas canvas-wide perimeter-demo jtk-surface jtk-surface-nopan" id="canvas">  <!-- Rectangle, Ellipse, Circle, Diamond, Triangle -->
+            <div class="jtk-demo-canvas canvas-wide perimeter-demo jtk-surface jtk-surface-nopan" id="canvas">
                 <div class="shape" data-shape="Rec_Def" id="test1"></div>
                 <div class="shape" data-shape="Rec_Use"></div>
                 <div class="shape" data-shape="Rec_Use2"></div>
