--- a/src/main/webapp/demo2/dom.html
+++ b/src/main/webapp/demo2/dom.html
@@ -30,6 +30,7 @@
         <div class="col-md-12">
         <div class="jtk-demo-main">
             <div class="jtk-demo-canvas canvas-wide perimeter-demo jtk-surface jtk-surface-nopan" id="canvas">
+                <!--js insert-->
                 <div class="shape" data-shape="Rec_Def" id="test1"></div>
                 <div class="shape" data-shape="Rec_Use" id="test3"></div>
                 <div class="shape" data-shape="Rec_Use2" id="test4"></div>
