--- a/src/main/webapp/dagre2/test.html
+++ b/src/main/webapp/dagre2/test.html
@@ -7,7 +7,6 @@
 	<link rel="stylesheet" href="editable.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-
 </head>
 
 <body>
@@ -52,7 +51,7 @@
 					</div>
 					<div class="alert alert-success" role="alert" id="alert1">file name</div>
 					<div id="chart1">
-						<textarea id="graph1"></textarea>
+						<div id="graph1"></div>
 					</div>
 				</div>
 			</div>
@@ -62,11 +61,11 @@
 	</div>
 
 
-	<script>
-		/*Fixing iframe window.innerHeight 0 issue in Safari*/
-		document.body.clientHeight;
+	<!--<script>-->
+		<!--/*Fixing iframe window.innerHeight 0 issue in Safari*/-->
+		<!--document.body.clientHeight;-->
 
-	</script>
+	<!--</script>-->
 
 
 	<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
@@ -74,17 +73,26 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 
-	<script src="https://gw.alipayobjects.com/os/antv/assets/g6/1.2.5/g6.min.js"></script>
-	<script src="https://gw.alipayobjects.com/os/antv/assets/g6-plugins/1.0.1/g6-plugins.min.js"></script>
-	<!--<script src="../node_modules/monaco-editor/min/vs/loader.js"></script>-->
 
-	<script src="codemirror/lib/codemirror.js"></script>
-	<script src="codemirror/mode/javascript/javascript.js"></script>
-	<script src="codemirror/mode/diff/diff.js"></script>
-	<link rel="stylesheet" href="codemirror/lib/codemirror.css">
-	<script src="editable.js" type="text/javascript">
-		
-		
+
+
+	<!--<script>var require = { paths: { 'vs': '/dev/vs' } };</script>-->
+	<script type="text/javascript" src="../node_modules/monaco-editor/dev/vs/loader.js"></script>
+
+	<script type="text/javascript">
+        require.config({ paths: { 'vs': '../node_modules/monaco-editor/dev/vs' }});
+
+
+        require(['vs/editor/editor.main'], function() {
+            var editor = monaco.editor.create(document.getElementById('graph1'), {
+                value: [
+                    'function x() {',
+                    '\tconsole.log("Hello world!");',
+                    '}'
+                ].join('\n'),
+                language: 'javascript'
+            });
+        });
 	</script>
 
 </body>
