--- a/src/main/webapp/demo2/dom.html
+++ b/src/main/webapp/demo2/dom.html
@@ -43,7 +43,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-        <script src="../node_modules/monaco-editor/min/vs/loader.js"></script>
+        <script src="../node_modules/monaco-editor/dev/vs/loader.js"></script>
+        <script type="text/javascript" src="../node_modules/monaco-editor/dev/vs/editor/editor.main.js"></script>
         <script src="../js/jsplumb.js"></script>
 		<script src="demo.js"></script>
 
