add basic function

--- a/src/main/webapp/dagre2/index.html
+++ b/src/main/webapp/dagre2/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="editable2.css">
+<!--    <link rel="stylesheet" href="editable2.css">-->
 
 
 </head>
@@ -72,36 +72,36 @@
         integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
 
-<script src="https://gw.alipayobjects.com/os/antv/assets/g6/1.2.5/g6.min.js"></script>
-<script src="https://gw.alipayobjects.com/os/antv/assets/g6-plugins/1.0.1/g6-plugins.min.js"></script>
-
-<script src="../node_modules/monaco-editor/dev/vs/loader.js"></script>
-<script>
-    require.config({ paths: { 'vs': '../node_modules/monaco-editor/dev/vs' }});
-
-    require(['vs/editor/editor.main'], function() {
-        var editor = monaco.editor.create(document.getElementById('rightEditor'), {
-            value: [
-                'function x() {',
-                '\tconsole.log("Hello world!");',
-                '}'
-            ].join('\n'),
-            language: 'javascript',
-        });
-    });
-
-
-</script>
-<!--<script src="../node_modules/@antv/g6/dist/g6.min.js"></script>-->
+<!--<script src="https://gw.alipayobjects.com/os/antv/assets/g6/1.2.5/g6.min.js"></script>-->
 <!--<script src="https://gw.alipayobjects.com/os/antv/assets/g6-plugins/1.0.1/g6-plugins.min.js"></script>-->
 
-<!--<script src="codemirror/lib/codemirror.js"></script>-->
-<!--<script src="codemirror/mode/javascript/javascript.js"></script>-->
-<!--<script src="codemirror/mode/diff/diff.js"></script>-->
-<!--<link rel="stylesheet" href="codemirror/lib/codemirror.css">-->
+<!--<script src="../node_modules/monaco-editor/dev/vs/loader.js"></script>-->
+<!--<script>-->
+<!--    require.config({ paths: { 'vs': '../node_modules/monaco-editor/dev/vs' }});-->
 
-<script src="data2.js" type="text/javascript"></script>
-<script src="index.js" type="text/javascript"></script>
+<!--    require(['vs/editor/editor.main'], function() {-->
+<!--        var editor = monaco.editor.create(document.getElementById('rightEditor'), {-->
+<!--            value: [-->
+<!--                'function x() {',-->
+<!--                '\tconsole.log("Hello world!");',-->
+<!--                '}'-->
+<!--            ].join('\n'),-->
+<!--            language: 'javascript',-->
+<!--        });-->
+<!--    });-->
+
+
+<!--</script>-->
+<!--&lt;!&ndash;<script src="../node_modules/@antv/g6/dist/g6.min.js"></script>&ndash;&gt;-->
+<!--&lt;!&ndash;<script src="https://gw.alipayobjects.com/os/antv/assets/g6-plugins/1.0.1/g6-plugins.min.js"></script>&ndash;&gt;-->
+
+<!--&lt;!&ndash;<script src="codemirror/lib/codemirror.js"></script>&ndash;&gt;-->
+<!--&lt;!&ndash;<script src="codemirror/mode/javascript/javascript.js"></script>&ndash;&gt;-->
+<!--&lt;!&ndash;<script src="codemirror/mode/diff/diff.js"></script>&ndash;&gt;-->
+<!--&lt;!&ndash;<link rel="stylesheet" href="codemirror/lib/codemirror.css">&ndash;&gt;-->
+
+<!--<script src="data2.js" type="text/javascript"></script>-->
+<!--<script src="index.js" type="text/javascript"></script>-->
 
 
 <!--</script>-->
