--- a/src/main/webapp/demo/dom.html
+++ b/src/main/webapp/demo/dom.html
@@ -21,59 +21,72 @@
         <h1>CLDIFF GUI</h1>
     </div>
 
+    <div class="dropdown">
+        <div class="btn-group">
+        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Commit <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" id="dropdown-menu">
+            <li><a href="#">graph-rocketmq-37cf2a7cb706a0cfe5b217940467c4a9cb33626e.json</a></li>
+            <li><a href="#">graph-rocketmq-3292d039ae882f42168d5f98969df83130ca05fb.json</a></li>
+            <li><a href="#">graph-rocketmq-85467dfd34d8ff379d2ddfec0489d78dcba20c27.json</a></li>
+            <li><a href="#">graph-rocketmq-b1fcf1b83b659bd03bcebf651d9e88c294a89e07.json</a></li>
+            <li><a href="#">graph-rocketmq-b421d48c476e74a8c7bb8129979df1dc0cb5a5a5.json</a></li>
 
-        <div class="jtk-demo-main col-md-8">
+            <li><a href="#">graph-rocketmq-c94fc4fa562ddc20332c3add01b95e291cd325a3.json</a></li>
+            <li><a href="#">graph-rocketmq-e9a0d62dbd8a1a6163870828d583300eb27e324a.json</a></li>
+            <li><a href="#">graph-rocketmq-f508f131f7dee2bcb86e66a6beb7bbdedbe31bc6.json</a></li>
+            <li><a href="#">graph-spring-framework-3c1adf7f6af0dff9bda74f40dabe8cf428a62003.json</a></li>
+            <li><a href="#">graph2.json</a>></li>
+            <li><a href="#">data10.json</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+        </ul>
+    </div>
+    </div>
+    <div class="row">
+
+        <div class="container col-md-9 ">
+        <div class = "panzoom">
+
+        <div class="jtk-demo-main " id="box">
 			<!-- demo -->
-            <div class="jtk-demo-canvas canvas-wide flowchart-demo jtk-surface jtk-surface-nopan " id="canvas">
-                <!--<div class="window jtk-node" id="flowchartWindow1"><strong>1</strong><br/><br/></div>-->
-                <!--<div class="window jtk-node" id="flowchartWindow2"><strong>2</strong><br/><br/></div>-->
-                <!--<div class="window jtk-node" id="flowchartWindow3"><strong>3</strong><br/><br/></div>-->
-                <!--<div class="window jtk-node" id="flowchartWindow4"><strong>4</strong><br/><br/></div>-->
+            <div class="canvas-wide flowchart-demo jtk-surface  " id="canvas">
+
             </div>
             <!-- /demo -->
         </div>
-
-        <div class="col-md-4">
+        </div>
+        </div>
+        <div class="col-md-3">
             <div id="chart">
                 <div class="page-header">
                     <h2>Code Info</h2>
                 </div>
 
-                <div id="rightEditor" style="height: 1000px"></div>
+                <div id="rightEditor" style="height: 100vh"></div>
             </div>
         </div>
+    </div>
 
 
-        <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
-        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-        <script src="../node_modules/monaco-editor/dev/vs/loader.js"></script>
-        <script src="init_node.js"></script>
-        <script src="../js/jsplumb.js"></script>
-        <script src="demo.js"></script>
-
-        <script>
-            /* global jsPlumb, $ */
-            $('.window').resizable({
-                resize: function (event, ui) {
-                    jsPlumb.repaint(ui.helper)
-                }
-            })
-            </script>
-        <script>
-            require.config({ paths: { 'vs': '../node_modules/monaco-editor/dev/vs' }});
-
-            require(['vs/editor/editor.main'], function() {
-                var editor = monaco.editor.create(document.getElementById('rightEditor'), {
-                    value: [
-                        'function x() {',
-                        '\tconsole.log("Hello world!");',
-                        '}'
-                    ].join('\n'),
-                    language: 'javascript',
-                });
-            });
+    <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+    <script src="../js/jquery-ui-1.9.2-min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
+    <script src="../js/lodash.min.js"></script>
+    <script src="../js/dagre.min.js"></script>
+    <script src="../js/jsPlumb.min.js"></script>
+    <script src="../js/jquery.panzoom.min.js"></script>
+    <script src="../node_modules/monaco-editor/dev/vs/loader.js"></script>
+    <script src="./data1.js"></script>
+    <script src="init_node.js"></script>
+    <script src="demo.js"></script>
+    <script src="panzoom.js"></script>
+    <script src="layout.js"></script>
+    <script src="refresh.js"></script>
 
 
-    </script>
     </body>
 </html>
