remove unnecessary char

--- a/src/main/webapp/demo/dom.html
+++ b/src/main/webapp/demo/dom.html
@@ -37,7 +37,7 @@
             <li><a href="#">graph-rocketmq-e9a0d62dbd8a1a6163870828d583300eb27e324a.json</a></li>
             <li><a href="#">graph-rocketmq-f508f131f7dee2bcb86e66a6beb7bbdedbe31bc6.json</a></li>
             <li><a href="#">graph-spring-framework-3c1adf7f6af0dff9bda74f40dabe8cf428a62003.json</a></li>
-            <li><a href="#">graph2.json</a>></li>
+            <li><a href="#">graph2.json</a></li>
             <li><a href="#">data10.json</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="#">Separated link</a></li>
