--- a/src/main/webapp/demo/dom.html
+++ b/src/main/webapp/demo/dom.html
@@ -65,6 +65,9 @@
 <div class="row">
 
     <div id="leftPanel" class="container  col-md-8">
+        <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+
         <div class="panzoom ">
             <div class="jtk-demo-main zoomViewport " id="box">
                 <!-- demo -->
@@ -77,8 +80,11 @@
 
     <div id="rightPanel" class="col-md-3">
         <div>
-            <h4>File path:</h4>
+            <h4>changed files:</h4>
+            <div class="alert alert-success" role="alert">src/main/java/org/apache/rocketmq/broker/BrokerController.java</div>
+            <div class="alert alert-success" role="alert">src/main/java/org/apache/rocketmq/broker/BrokerController.java</div>
             <div id="span" style="word-break: break-word"></div>
+            <h4>diff entry:</h4>
         </div>
         <div id="rightEditor" ></div>
     </div>
