--- a/src/main/webapp/demo/dom.html
+++ b/src/main/webapp/demo/dom.html
@@ -115,13 +115,11 @@
 <script src="../node_modules/monaco-editor/dev/vs/loader.js"></script>
 <script src="./data1.js"></script>
 
-<script src="panzoom.js"></script>
-
-<script src="demo.js"></script>
-
+<script src="mouseevent.js"></script>
 <script src="layout.js"></script>
 <script src="init_node.js"></script>
 <script src="refresh.js"></script>
+<script src="main.js"></script>
 
 
 </body>
