--- a/src/main/webapp/demo/dom.html
+++ b/src/main/webapp/demo/dom.html
@@ -27,7 +27,7 @@
 
 <div id="headerBanner" class="row">
 
-    <div id="selectionHeader" class="col-md-9">
+    <div id="selectionHeader" class="col-md-8">
         <div class="col-md-3">
             <h2>Select your tasks:</h2>
         </div>
@@ -65,7 +65,7 @@
 
 <div class="row">
 
-    <div id="leftPanel" class="container  col-md-9">
+    <div id="leftPanel" class="container  col-md-8">
 
         <span id="minus_canvas" class="glyphicon glyphicon-minus" aria-hidden="true"></span>
         <span id="plus_canvas" class="glyphicon glyphicon-plus" aria-hidden="true"></span>
@@ -111,7 +111,7 @@
 <script src="../js/jquery.zoomooz.min.js"></script>
 
 <script src="../js/dagre.min.js"></script>
-<script src="../js/jsPlumb.js"></script>
+<script src="../js/jsplumb.js"></script>
 <script src="../js/jquery.panzoom.min.js"></script>
 
 <script src="../node_modules/monaco-editor/dev/vs/loader.js"></script>
